<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PC Remote Control</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_welcome_fragment">PC Remote Control</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_first_fragment">FirstFragment</string>
    <string name="title_activity_second_fragment">SecondFragment</string>
    <string name="title_activity_third_fragment">ThirdFragment</string>
    <string name="title_activity_fourth_fragment">FourthFragment</string>
    <string name="title_activity_mouse_controll">MouseControllActivity</string>
    <string name="title_activity_controll_fragment">ControllFragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="download_link">http://goo.gl/vj1jDO</string>
    <string name="Welcome">Welcome</string>
    <string name="toggle">Toggle up your WIFI\nConfirm your PC and\nYour control device connected to the same WIFI spot</string>
    <string name="first">First</string>
    <string name="enterip">Please enter your PCs IP address</string>
    <string name="next">Next</string>
    <string name="ok">OK</string>
    <string name="clickok">Click OK after finishing typing</string>
    <string name="hintip">Hint:To Look up your PCs IP address:\n\t\t\t\tUnder CMD enter ipconfig\n\t\t\t\tIf using OSX under terminal enter ifconfig</string>
    <string name="historicip">Historic IP</string>
    <string name="confirm">Please confirm server is running</string>
    <string name="connect">Connect</string>
    <string name="clickconnect">If does click connect</string>
    <string name="switch1">Switch to Control Menu</string>
    <string name="pptmode">PowerPoint Control Mode</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="prev">Prev Page</string>
    <string name="nextp">Next Page</string>
    <string name="white">WhiteBoard</string>
    <string name="pptp">PPT  pages</string>
    <string name="conf">Confirm</string>
    <string name="finally1">Finally</string>
    <string name="cursor">Control cursor on the screen below"</string>
    <string name="playpause">Play/Pause</string>
    <string name="vup">Volume Down</string>
    <string name="vd">Volume Up</string>
    <string name="bac">Backward</string>
    <string name="for1">Forward</string>
    <string name="b0">0</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="tap">Tap on the screen for mouse button-left \nLong press for mouse button-right</string>
    <string name="paintm">PaintMode</string>
    <string name="server">You will need to download the server first to begin</string>
    <string name="enterurl">Enter the URL below in your PC browser to start downloading</string>
    <string name="pptc">PPT Control</string>
    <string name="mousec">Mouse Control</string>
    <string name="youc">YouTube Control</string>
    <string name="conts">Control Mode Selection</string>

</resources>